--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 class="heading">About <span>Me</span><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
-            <img src="C:\Users\palom\Downloads\web\453941445_1246798613029223_8663743154755572507_n.jpg" alt="">
+            <img src="453941445_1246798613029223_8663743154755572507_n.jpg" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
