--- a/linkin.html
+++ b/linkin.html
@@ -6,48 +6,62 @@
     <title>Document</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    color: #333;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 
-        .typing-animation {
-            font-family: monospace; 
-            white-space: nowrap;
-            overflow: hidden; 
-            border-right: 3px solid black; 
-            color: #70083c; 
-            font-size: 40px; 
-            text-align: center; 
-            animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
-            margin: 0 auto; 
-            width: fit-content; 
-        }
+.typing-animation {
+    font-family: monospace;
+    white-space: normal; /* Allows text to wrap */
+    overflow: hidden;
+    border-right: 3px solid black;
+    color: #70083c;
+    font-size: 40px;
+    text-align: center;
+    animation: typing 3s steps(40, end), blink-caret 0.75s step-end infinite;
+    max-width: 90vw; /* Ensure text fits within viewport width */
+    box-sizing: border-box; /* Includes padding and border in width calculation */
+    padding: 0 10px; /* Optional: Adds padding to prevent text from touching the edges */
+}
 
-        @keyframes typing {
-            from {
-                width: 0;
-            }
-            to {
-                width: 100%;
-            }
-        }
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
 
-        @keyframes blink-caret {
-            from, to {
-                border-color: transparent;
-            }
-            50% {
-                border-color: black;
-            }
-        }
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: black;
+    }
+}
 
-        .highlight {
-            background-color: yellow;
-            font-weight: bold;
-        }
+.highlight {
+    background-color: yellow;
+    font-weight: bold;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 600px) {
+    .typing-animation {
+        font-size: 24px; /* Adjust font size for smaller screens */
+        max-width: 95vw; /* Adjust max-width for better fit on mobile */
+    }
+}
+
     </style>
 </head>
 
