--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Potfolio</title>
+    <title>Personal Portfolio</title>
 
     <link rel="stylesheet" href="index.css">
 
@@ -17,7 +17,7 @@
 
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio.<span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo">Welcome to my Website-Portfolio.<span class="animate" style="--i:1;"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
