--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
         <div id="errorMessage"></div>
         <button id="createAccountBtn">Create Account</button>
     </div>
+
+
+
+
+    
+
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2024 | Designed and
+                Maintenance by Mark Anthony Palo | All
+                Rights Reserved</p>
+        </div>
+    </footer>
+ 
     <script src="scripts.js"></script>
 </body>
 </html>
+
 
