--- a/login.html
+++ b/login.html
@@ -61,8 +61,8 @@
 
         <div class="home-sci">
             <a href="https://web.facebook.com/profile.php?id=100065759381732"><i class='bx bxl-facebook'></i></a>
-            <a href="twitter.html"><i class='bx bxl-twitter'></i></a>
-            <a href="linkin.html"><i class='bx bxl-linkedin'></i></a>
+            <a href=" https://www.messenger.com/t/100048114084111 "><i class='bx bxl-messenger'></i></a>
+            <a href=" https://web.whatsapp.com/palomarkanthony8 "><i class='bx bxl-whatsapp'></i></a>
             <span class="animate" style="--i:6;"></span>
         </div>
 
